<resources>
    <string name="app_name">SmartTeam</string>
    <string name="google_maps_key">AIzaSyAvamJOipeTPCXvPgZdbOWh7Elx4BRwEDA</string>
    <string name="enable_location">Please enable location in settings</string>
    <string name="no_network_connection">Sorry! It appears that we are offline. Content and images may not display until we reconnect to the Internet.</string>
    <string name="digit_token_error_message">An error occurred while either fetching the token, Please try again</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token, sending the fetched token to the server or subscribing to the PubSub topic. Please try running the sample again.</string>
    <string name="choose_gallery">CHOOSE FROM GALLERY</string>
    <string name="open_document">OPEN DOCUMENT</string>
    <string name="choose_document">CHOOSE DOCUMENT</string>
    <string name="crop_image">Crop Image</string>
    <string name="total_photos">Total Photo(s) </string>
    <string name="choosephotos">Choose Photos</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="add_video_url">ADD VIDEO URL</string>
    <string name="error_video_thumb">please select a thumb for video url</string>
    <string name="blank_video_url">Please enter video url</string>
    <string name="error_video_url">Please enter valid video url</string>
    <string name="enter_video">Please enter video url starts with http://</string>
    <string name="take_photo">take photo</string>
    <string name="upload_photo">upload photo</string>
    <string name="upload_parking_card">upload vehicle log card photo</string>
    <string name="choose_floor_plan">choose floor plan</string>
    <string name="close">Close</string>
    <string name="msg_file_extension">Please select PDF/Doc/Excel/PPT/Generic Text/JPEG/PNG file</string>
    <string name="upload_image">Upload Photo(s)</string>
    <string name="upload_image_video">upload photo(s)/video</string>
    <string name="bullet">\u2022</string>
    <string name="bullet_big">\u26AB</string>
    <string name="lbl_to">To</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="open_settings">Open Settings</string>
    <string name="menu_crop">Crop</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_no">No</string>
    <string name="lbl_call">Call</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_crop_image">Crop Image</string>
    <string name="alert_no_internet">Internet connection is not available</string>
    <string name="lbl_no_records_available">No records available</string>
    <string name="alert_delete_message">Are you sure want to delete?</string>
    <string name="alert_call_message">Are you sure want to call?</string>
    <string name="lbl_minus">&#8211;</string>
    <string name="lbl_plus">&#43;</string>
    <string name="toast_exit_msg">Press again to exit</string>
    <string name="lbl_open_camera">Open Camera</string>
    <string name="lbl_open_gallery">Open Gallery</string>
    <string name="lbl_menu">Menu</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_done">Done</string>
    <string name="hint_search">Search</string>
    <string name="alert_logout_message">Are you sure you want to logout?</string>
    <string name="lbl_no_data">No Data Found</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="bold">font/roboto_bold.ttf</string>
    <string name="semi_bold">font/roboto_medium.ttf</string>
    <string name="regular">font/roboto_regular.ttf</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_company_profile">Company profile</string>
    <string name="lbl_my_reports">My Reports</string>
    <string name="lbl_holidays">Holidays</string>
    <string name="lbl_policy">Policy</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="title_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="lbl_forgot_password">Forgot Your Password</string>
    <string name="lbl_reset_phone">Enter your phone to reset it</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_resend_otp">Resend OTP?</string>
    <string name="lbl_end_user">End User</string>
    <string name="tab_active">Active</string>
    <string name="tab_message">Message</string>
    <string name="title_project">Projects</string>
    <string name="lbl_active">Active</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_owner">Created By : </string>
    <string name="lbl_created_date">Created date : </string>
    <string name="lbl_start_date">Start date :</string>
    <string name="lbl_end_date">End date :</string>
    <string name="lbl_total_task">Total Task :</string>
    <string name="lbl_description">Description :</string>
    <string name="lbl_assigned_to_list">Assigned To : </string>
    <string name="lbl_file">File : </string>
    <string name="lbl_manage_user">Manage User</string>
    <string name="lbl_add_task">Add Task</string>
    <string name="lbl_add_document">Add Document</string>
    <string name="tab_members">Members</string>
    <string name="tab_task">Task</string>
    <string name="tab_document">Document</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_end_date">End date</string>
    <string name="title_create_project">Create Project</string>
    <string name="title_update_project">Update Project</string>
    <string name="title_add_member">Add Member</string>
    <string name="hint_project_title">Project Title</string>
    <string name="title_task">Task</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_reported">Reported</string>
    <string name="title_create_task">Create Task</string>
    <string name="hint_task_date">Task Date</string>
    <string name="hint_task_tittle">Task Title</string>
    <string name="hint_project">Project</string>
    <string name="hint_task_file">Task File(Optional)</string>
    <string name="hint_task_type">Task Type</string>
    <string name="hint_task_priority">Task Priority</string>
    <string name="lbl_task_title">Task Title</string>
    <string name="lbl_project_name">Project Name</string>
    <string name="lbl_assign_to">Assign To</string>
    <string name="lbl_upload_document">Upload Document</string>
    <string name="lbl_add">Add</string>
    <string name="title_report">Report</string>
    <string name="lbl_report">Report</string>
    <string name="lbl_pdf">Pdf</string>
    <string name="title_create_report">Create Report</string>
    <string name="hint_date">Date</string>
    <string name="hint_expense_type">Expense Type</string>
    <string name="hint_completed_task">Completed Task</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>
    <string name="delete_project">Are you sure, want to delete this Project?</string>
    <string name="title_attendance">Attendance</string>
    <string name="lbl_attendance">Attendance</string>
    <string name="lbl_leaves">Leaves</string>
    <string name="title_create_leave">Create Leave</string>
    <string name="lbl_is_half_day">Is Half Day</string>
    <string name="hint_leave_type">Leave Type</string>
    <string name="error_email_address">Please enter email address</string>
    <string name="error_email_valid">Please enter valid email address</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="error_password_length">Password must be between 5 to 20 characters</string>
    <string name="lbl_no_internet">No internet</string>
    <string name="lbl_take_photo">Take photo</string>
    <string name="lbl_choose_photo">Choose photo</string>
    <string name="lbl_delete_photo">Delete photo</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="lbl_confirm_password">Confairm Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_birth_date">Birth Date </string>
    <string name="hint_old_password">Old Password</string>
    <string name="error_enter_new_password">Enter New Password</string>
    <string name="error_enter_old_password">Enter old password</string>
    <string name="error_enter_confirm_password">Enter Confirm Password</string>
    <string name="error_old_new_password_match">Old New password Match</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="title_change_password">Change Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="title_my_time_sheet">Add TimeSheet</string>
    <string name="lbl_add_time_sheet">Add TimeSheet</string>
    <string name="lbl_select_date">Select Date</string>
    <string name="lbl_select_project">Select Peoject</string>
    <string name="lbl_select_task">Select Task</string>
    <string name="lbl_time">Time in HH:MM</string>
    <string name="lbl_description_two">Description</string>
    <string name="title_add_expense">Add Expense</string>
    <string name="lbl_add_expense">Add Expense</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_select_expense_type">Select Expense Type</string>
    <string name="title_apply_leaves">Apply Leaves</string>
    <string name="lbl_apply_leaves">Apply Leaves</string>
    <string name="title_add_attendance">Add Attendance</string>
    <string name="hint_check_in_time">Check In Time</string>
    <string name="hint_check_out_time">Check Out Time</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_resean">Enter Resean</string>
    <string name="lbl_end_date_two">End Date</string>
    <string name="lbl_add_leaves">Add Leave</string>
    <string name="lbl_add_attendance">Add Attendance</string>
    <string name="lbl_start_day_is_full_day">Start Day Is Full Day?</string>
    <string name="lbl_end_day_is_full_day">End Day Is Full Day?</string>
    <string name="title_time_sheet">Time Sheet</string>
    <string name="tittle_create_user">Create User</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="lbl_gender">Gender</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="error_first_name">Please enter first name</string>
    <string name="error_enter">Please Enter</string>
    <string name="error_last_name">Please enter last name</string>
    <string name="error_phone">Please enter valid phone number</string>
    <string name="error_email">Please enter valid email</string>
    <string name="error_gender">Please select gender</string>
    <string name="error_birth_date">Please select date of birth</string>
    <string name="permission_denied_message"><![CDATA[If you reject permission, you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>
</resources>