<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_20">

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_5"
        android:paddingRight="@dimen/margin_5"
        android:text="@string/open_camera" />

    <Button
        android:id="@+id/btnOpenGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:paddingLeft="@dimen/margin_5"
        android:paddingRight="@dimen/margin_5"
        android:text="@string/choose_gallery" />

    <Button
        android:id="@+id/btnOpenDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:paddingLeft="@dimen/margin_5"
        android:paddingRight="@dimen/margin_5"
        android:text="@string/choose_document" />

    <Button
        android:id="@+id/btnOpenVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:paddingLeft="@dimen/margin_5"
        android:paddingRight="@dimen/margin_5"
        android:text="@string/add_video_url" />
</LinearLayout>
