<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10">

            <EditText
                android:id="@+id/etProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/hint_project_title"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/tvErrorProject"
                style="@style/styleErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/error_enter"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:focusable="false"
                android:hint="@string/lbl_start_date" />

            <TextView
                android:id="@+id/tvErrorStartDate"
                style="@style/styleErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/error_enter"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:focusable="false"
                android:hint="@string/lbl_end_date" />

            <TextView
                android:id="@+id/tvErrorEndDate"
                style="@style/styleErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/error_enter"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="top|left"
                android:hint="@string/hint_description"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="5" />

            <TextView
                android:id="@+id/tvErrorDescription"
                style="@style/styleErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/error_enter"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAssignTo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                style="@style/TextSemiBold"
                android:padding="@dimen/margin_10"
                android:textColor="@color/text_hint_color"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_arrow_right"
                android:textSize="@dimen/font_16"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/lbl_assign_to" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMember"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvUpLoadDocument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/lbl_upload_document"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_16" />

            <Button
                android:layout_width="@dimen/margin_100"
                android:layout_height="@dimen/margin_100"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/lbl_add" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/lbl_submit" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
