<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:focusable="false"
            android:hint="@string/lbl_select_date"
            android:inputType="none"
            android:longClickable="false"
            android:maxLength="13"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/tvErrorDate"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />


        <EditText
            android:id="@+id/etCheckInTime"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_check_in_time"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tvErrorCheckInTime"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etCheckOutTime"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_check_out_time"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tvErrorCheckOutTime"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />


        <EditText
            android:id="@+id/etDescription"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:hint="@string/hint_description"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tvErrorDescription"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/lbl_submit" />
</LinearLayout>
