<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:focusable="true"
            android:hint="@string/lbl_date"
            android:inputType="none"
            android:longClickable="false"
            android:maxLength="13"
            android:textIsSelectable="false" />


        <TextView
            android:id="@+id/tvErrorDate"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />


        <com.techmali.smartteam.ui.views.MyEditText
            android:id="@+id/etExpenseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/lbl_select_expense_type"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/tvErrorExpenseType"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />


        <com.techmali.smartteam.ui.views.MyEditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/lbl_amount"
            android:imeOptions="actionDone"
            android:padding="@dimen/margin_10" />

        <TextView
            android:id="@+id/tvErrorAmount"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />

        <com.techmali.smartteam.ui.views.MyEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/lbl_description_two"
            android:imeOptions="actionDone"
            android:maxLines="5"
            android:padding="@dimen/margin_10" />

        <TextView
            android:id="@+id/tvErrorDescription"
            style="@style/styleErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_enter"
            android:visibility="gone" />

    </LinearLayout>

    <com.techmali.smartteam.ui.views.MyButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/lbl_submit" />
</LinearLayout>
